--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,11 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/logs/
 /storage/pail
 /vendor
+/bootstrap/cache/*
+!bootstrap/cache/.gitignore
 Homestead.json
 Homestead.yaml
 Thumbs.db
